--- a/ShoppingList/View/Include/SelectedShoppingListPageUC.xaml
+++ b/ShoppingList/View/Include/SelectedShoppingListPageUC.xaml
@@ -77,16 +77,87 @@
                                 Command="{Binding FilterFruitCommand}"
                                 Content="filterTest"
                                 Foreground="White" >
-                                
+
                                 <Button.Flyout>
                                     <Flyout>
                                         <StackPanel>
-                                            <ListView ItemsSource="{Binding FilteredCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></ListView>
+                                            <ListView ItemsSource="{Binding FilteredCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                                <ListView.ItemContainerStyle>
+                                                    <Style TargetType="ListViewItem">
+                                                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                                    </Style>
+                                                </ListView.ItemContainerStyle>
+                                                <ListView.ItemTemplate>
+                                                    <DataTemplate>
+                                                        <Border BorderBrush="#81a6c7" BorderThickness="0,0,0,1">
+                                                            <Grid Grid.Row="1" Margin="0,10">
+                                                                <Grid.RowDefinitions>
+                                                                    <RowDefinition />
+                                                                    <RowDefinition />
+                                                                    <RowDefinition />
+                                                                </Grid.RowDefinitions>
+                                                                <Grid.ColumnDefinitions>
+                                                                    <ColumnDefinition />
+                                                                    <ColumnDefinition />
+                                                                </Grid.ColumnDefinitions>
+                                                                <TextBlock
+                                                                    Grid.Row="0"
+                                                                    Grid.Column="0"
+                                                                    VerticalAlignment="Top"
+                                                                    FontSize="20"
+                                                                    FontWeight="SemiLight"
+                                                                    Foreground="IndianRed"
+                                                                    Text="{Binding ItemName}" />
+                                                                <TextBlock
+                                                                    Grid.Row="2"
+                                                                    Grid.Column="0"
+                                                                    VerticalAlignment="Top"
+                                                                    FontSize="15"
+                                                                    FontWeight="SemiLight"
+                                                                    Foreground="IndianRed">
+                                                                    <Run Text="Ca Pris:" />
+                                                                    <Run Text="{Binding ItemPrice}" />
+                                                                    <Run Text=",-" />
+                                                                </TextBlock>
+                                                                <TextBlock
+                                                                    Grid.Row="0"
+                                                                    Grid.Column="1"
+                                                                    HorizontalAlignment="Right"
+                                                                    VerticalAlignment="Top"
+                                                                    FontSize="20"
+                                                                    FontWeight="SemiLight"
+                                                                    Foreground="IndianRed">
+                                                                    <Run Text="{Binding ItemAmount}" />
+                                                                    <Run Text="{Binding ItemAmountType}" />
+                                                                </TextBlock>
+                                                                <TextBlock
+                                                                    Grid.Row="1"
+                                                                    Grid.Column="1"
+                                                                    HorizontalAlignment="Right"
+                                                                    VerticalAlignment="Top"
+                                                                    FontSize="15"
+                                                                    FontWeight="SemiLight"
+                                                                    Foreground="IndianRed"
+                                                                    Text="{Binding Store}" />
+                                                                <TextBlock
+                                                                    Grid.Row="2"
+                                                                    Grid.Column="1"
+                                                                    HorizontalAlignment="Right"
+                                                                    VerticalAlignment="Top"
+                                                                    FontSize="15"
+                                                                    FontWeight="SemiLight"
+                                                                    Foreground="IndianRed"
+                                                                    Text="{Binding ItemCatagory}" />
+                                                            </Grid>
+                                                        </Border>
+                                                    </DataTemplate>
+                                                </ListView.ItemTemplate>
+                                            </ListView>
                                         </StackPanel>
                                     </Flyout>
                                 </Button.Flyout>
-
-                                </Button>
+                            </Button>
+                                
                         </StackPanel>
                     </Flyout>
                 </Button.Flyout>
