--- a/ShoppingList/View/Include/SelectedShoppingListPageUC.xaml
+++ b/ShoppingList/View/Include/SelectedShoppingListPageUC.xaml
@@ -76,7 +76,7 @@
                                 VerticalAlignment="Stretch"
                                 Command="{Binding FilterFruitCommand}"
                                 Content="filterTest"
-                                Foreground="White" >
+                                Foreground="White">
 
                                 <Button.Flyout>
                                     <Flyout>
@@ -157,7 +157,7 @@
                                     </Flyout>
                                 </Button.Flyout>
                             </Button>
-                                
+
                         </StackPanel>
                     </Flyout>
                 </Button.Flyout>
@@ -174,7 +174,7 @@
             <ListView
                 Grid.Row="1"
                 ItemsSource="{Binding ProductListOnSelectedShoppingList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                SelectedItem="{Binding ProductListOnSelectedShoppingListItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                SelectedItem="{Binding SelectedProductListOnSelectedShoppingListItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
                         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -183,6 +183,83 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Border BorderBrush="#81a6c7" BorderThickness="0,0,0,1">
+                            <Grid Grid.Row="1" Margin="0,10">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition />
+                                    <RowDefinition />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock
+                                    Grid.Row="0"
+                                    Grid.Column="0"
+                                    VerticalAlignment="Top"
+                                    FontSize="20"
+                                    FontWeight="SemiLight"
+                                    Foreground="Bisque"
+                                    Text="{Binding ItemName}" />
+                                <TextBlock
+                                    Grid.Row="2"
+                                    Grid.Column="0"
+                                    VerticalAlignment="Top"
+                                    FontSize="15"
+                                    FontWeight="SemiLight"
+                                    Foreground="Bisque">
+                                    <Run Text="Ca Pris:" />
+                                    <Run Text="{Binding ItemPrice}" />
+                                    <Run Text=",-" />
+                                </TextBlock>
+                                <TextBlock
+                                    Grid.Row="0"
+                                    Grid.Column="1"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Top"
+                                    FontSize="20"
+                                    FontWeight="SemiLight"
+                                    Foreground="Bisque">
+                                    <Run Text="{Binding ItemAmount}" />
+                                    <Run Text="{Binding ItemAmountType}" />
+
+                                </TextBlock>
+                                <TextBlock
+                                    Grid.Row="1"
+                                    Grid.Column="1"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Top"
+                                    FontSize="15"
+                                    FontWeight="SemiLight"
+                                    Foreground="Bisque"
+                                    Text="{Binding Store}" />
+                                <TextBlock
+                                    Grid.Row="2"
+                                    Grid.Column="1"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Top"
+                                    FontSize="15"
+                                    FontWeight="SemiLight"
+                                    Foreground="Bisque"
+                                    Text="{Binding ItemCatagory}" />
+                            </Grid>
+                        </Border>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <!--  Bought Product List  -->
+            <ListView Grid.Row="1" ItemsSource="{Binding BoughtProductOnSelectedShoppingList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Border
+                            BorderBrush="#81a6c7"
+                            BorderThickness="0,0,0,1"
+                            Opacity="0.5">
                             <Grid Grid.Row="1" Margin="0,10">
                                 <Grid.RowDefinitions>
                                     <RowDefinition />
