--- a/ShoppingList/View/Include/SelectedShoppingListPageUC.xaml
+++ b/ShoppingList/View/Include/SelectedShoppingListPageUC.xaml
@@ -163,167 +163,180 @@
                 </Button.Flyout>
             </Button>
         </StackPanel>
-        <StackPanel Grid.Row="1">
+        <ScrollViewer Grid.Row="1">
 
-            <TextBlock
-                HorizontalAlignment="Center"
-                FontSize="25"
-                FontWeight="SemiBold"
-                Foreground="Bisque"
-                Text="{Binding SelectedListTotalPrice}" />
-            <ListView
-                Grid.Row="1"
-                ItemsSource="{Binding ProductListOnSelectedShoppingList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                SelectedItem="{Binding SelectedProductListOnSelectedShoppingListItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="ListViewItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                    </Style>
-                </ListView.ItemContainerStyle>
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="#81a6c7" BorderThickness="0,0,0,1">
-                            <Grid Grid.Row="1" Margin="0,10">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition />
-                                    <RowDefinition />
-                                    <RowDefinition />
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock
-                                    Grid.Row="0"
-                                    Grid.Column="0"
-                                    VerticalAlignment="Top"
-                                    FontSize="20"
-                                    FontWeight="SemiLight"
-                                    Foreground="Bisque"
-                                    Text="{Binding ItemName}" />
-                                <TextBlock
-                                    Grid.Row="2"
-                                    Grid.Column="0"
-                                    VerticalAlignment="Top"
-                                    FontSize="15"
-                                    FontWeight="SemiLight"
-                                    Foreground="Bisque">
-                                    <Run Text="Ca Pris:" />
-                                    <Run Text="{Binding ItemPrice}" />
-                                    <Run Text=",-" />
-                                </TextBlock>
-                                <TextBlock
-                                    Grid.Row="0"
-                                    Grid.Column="1"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Top"
-                                    FontSize="20"
-                                    FontWeight="SemiLight"
-                                    Foreground="Bisque">
-                                    <Run Text="{Binding ItemAmount}" />
-                                    <Run Text="{Binding ItemAmountType}" />
+            <StackPanel>
+                <TextBlock
+                    HorizontalAlignment="Center"
+                    FontSize="25"
+                    FontWeight="SemiBold"
+                    Foreground="Bisque"
+                    Text="{Binding SelectedListTotalPrice}" />
+                <ListView
+                    x:Name="BaseProductList"
+                    Grid.Row="1"
+                    AllowDrop="True"
+                    CanDragItems="True"
+                    CanReorderItems="True"
+                    ItemsSource="{Binding ProductListOnSelectedShoppingList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    SelectedItem="{Binding SelectedProductListOnSelectedShoppingListItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="#81a6c7" BorderThickness="0,0,0,1">
+                                <Grid Grid.Row="1" Margin="0,10">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition />
+                                        <RowDefinition />
+                                        <RowDefinition />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock
+                                        Grid.Row="0"
+                                        Grid.Column="0"
+                                        VerticalAlignment="Top"
+                                        FontSize="20"
+                                        FontWeight="SemiLight"
+                                        Foreground="Bisque"
+                                        Text="{Binding ItemName}" />
+                                    <TextBlock
+                                        Grid.Row="2"
+                                        Grid.Column="0"
+                                        VerticalAlignment="Top"
+                                        FontSize="15"
+                                        FontWeight="SemiLight"
+                                        Foreground="Bisque">
+                                        <Run Text="Ca Pris:" />
+                                        <Run Text="{Binding ItemPrice}" />
+                                        <Run Text=",-" />
+                                    </TextBlock>
+                                    <TextBlock
+                                        Grid.Row="0"
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Top"
+                                        FontSize="20"
+                                        FontWeight="SemiLight"
+                                        Foreground="Bisque">
+                                        <Run Text="{Binding ItemAmount}" />
+                                        <Run Text="{Binding ItemAmountType}" />
 
-                                </TextBlock>
-                                <TextBlock
-                                    Grid.Row="1"
-                                    Grid.Column="1"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Top"
-                                    FontSize="15"
-                                    FontWeight="SemiLight"
-                                    Foreground="Bisque"
-                                    Text="{Binding Store}" />
-                                <TextBlock
-                                    Grid.Row="2"
-                                    Grid.Column="1"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Top"
-                                    FontSize="15"
-                                    FontWeight="SemiLight"
-                                    Foreground="Bisque"
-                                    Text="{Binding ItemCatagory}" />
-                            </Grid>
-                        </Border>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            <!--  Bought Product List  -->
-            <ListView Grid.Row="1" ItemsSource="{Binding BoughtProductOnSelectedShoppingList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="ListViewItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                    </Style>
-                </ListView.ItemContainerStyle>
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Border
-                            BorderBrush="#81a6c7"
-                            BorderThickness="0,0,0,1"
-                            Opacity="0.5">
-                            <Grid Grid.Row="1" Margin="0,10">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition />
-                                    <RowDefinition />
-                                    <RowDefinition />
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock
-                                    Grid.Row="0"
-                                    Grid.Column="0"
-                                    VerticalAlignment="Top"
-                                    FontSize="20"
-                                    FontWeight="SemiLight"
-                                    Foreground="Bisque"
-                                    Text="{Binding ItemName}" />
-                                <TextBlock
-                                    Grid.Row="2"
-                                    Grid.Column="0"
-                                    VerticalAlignment="Top"
-                                    FontSize="15"
-                                    FontWeight="SemiLight"
-                                    Foreground="Bisque">
-                                    <Run Text="Ca Pris:" />
-                                    <Run Text="{Binding ItemPrice}" />
-                                    <Run Text=",-" />
-                                </TextBlock>
-                                <TextBlock
-                                    Grid.Row="0"
-                                    Grid.Column="1"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Top"
-                                    FontSize="20"
-                                    FontWeight="SemiLight"
-                                    Foreground="Bisque">
-                                    <Run Text="{Binding ItemAmount}" />
-                                    <Run Text="{Binding ItemAmountType}" />
+                                    </TextBlock>
+                                    <TextBlock
+                                        Grid.Row="1"
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Top"
+                                        FontSize="15"
+                                        FontWeight="SemiLight"
+                                        Foreground="Bisque"
+                                        Text="{Binding Store}" />
+                                    <TextBlock
+                                        Grid.Row="2"
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Top"
+                                        FontSize="15"
+                                        FontWeight="SemiLight"
+                                        Foreground="Bisque"
+                                        Text="{Binding ItemCatagory}" />
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <!--  Bought Product List  -->
+                <ListView
+                    x:Name="BoughtListView"
+                    Grid.Row="1"
+                    AllowDrop="True"
+                    CanDragItems="True"
+                    CanReorderItems="True"
+                    ItemsSource="{Binding BoughtProductOnSelectedShoppingList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    SelectedItem="{Binding SelectedBoughtProductListItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Border
+                                BorderBrush="#81a6c7"
+                                BorderThickness="0,0,0,1"
+                                Opacity="0.5">
+                                <Grid Grid.Row="1" Margin="0,10">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition />
+                                        <RowDefinition />
+                                        <RowDefinition />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock
+                                        Grid.Row="0"
+                                        Grid.Column="0"
+                                        VerticalAlignment="Top"
+                                        FontSize="20"
+                                        FontWeight="SemiLight"
+                                        Foreground="Bisque"
+                                        Text="{Binding ItemName}" />
+                                    <TextBlock
+                                        Grid.Row="2"
+                                        Grid.Column="0"
+                                        VerticalAlignment="Top"
+                                        FontSize="15"
+                                        FontWeight="SemiLight"
+                                        Foreground="Bisque">
+                                        <Run Text="Ca Pris:" />
+                                        <Run Text="{Binding ItemPrice}" />
+                                        <Run Text=",-" />
+                                    </TextBlock>
+                                    <TextBlock
+                                        Grid.Row="0"
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Top"
+                                        FontSize="20"
+                                        FontWeight="SemiLight"
+                                        Foreground="Bisque">
+                                        <Run Text="{Binding ItemAmount}" />
+                                        <Run Text="{Binding ItemAmountType}" />
 
-                                </TextBlock>
-                                <TextBlock
-                                    Grid.Row="1"
-                                    Grid.Column="1"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Top"
-                                    FontSize="15"
-                                    FontWeight="SemiLight"
-                                    Foreground="Bisque"
-                                    Text="{Binding Store}" />
-                                <TextBlock
-                                    Grid.Row="2"
-                                    Grid.Column="1"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Top"
-                                    FontSize="15"
-                                    FontWeight="SemiLight"
-                                    Foreground="Bisque"
-                                    Text="{Binding ItemCatagory}" />
-                            </Grid>
-                        </Border>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </StackPanel>
+                                    </TextBlock>
+                                    <TextBlock
+                                        Grid.Row="1"
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Top"
+                                        FontSize="15"
+                                        FontWeight="SemiLight"
+                                        Foreground="Bisque"
+                                        Text="{Binding Store}" />
+                                    <TextBlock
+                                        Grid.Row="2"
+                                        Grid.Column="1"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Top"
+                                        FontSize="15"
+                                        FontWeight="SemiLight"
+                                        Foreground="Bisque"
+                                        Text="{Binding ItemCatagory}" />
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </UserControl>
